syntax = "proto3";

package go.micro.service.house;

service House {
	rpc List(ListRequest) returns (ListResponse) {}

	rpc Create(CreateRequest) returns (CreateResponse) {}

	rpc UploadImage(UploadImageRequest) returns (UploadImageResponse) {}

	rpc Detail(DetailRequest) returns (DetailResponse) {}
}

message ListRequest {
    uint32 aid = 1;
    string start_date = 2;
    string end_date = 3;
    uint32 page = 4;

}


message ListItem {
    string address = 1;
    string area_name = 2;
    string ctime = 3;
    uint32 house_id = 4;
    string image_url = 5;
    uint32 order_count = 6;
    uint32 price = 7;
    uint32 room_count = 8;
    string title = 9;
    string user_avatar = 10;
}

message ListResponse {
    uint32 current_page = 1;
	repeated ListItem houses = 2;
	uint32 total_page = 3;
}


message CreateRequest {
    string title = 1;
    uint32 price = 2;
    uint32 area_id = 3;
    string address = 4;
    uint32 room_count = 5;
    uint32 acreage = 6;
    string unit = 7;
    uint32 capacity = 8;
    string beds = 9;
    uint32 deposit = 10;
    uint32 min_days = 11;
    uint32 max_days = 12;
    repeated uint32  facility = 13;
}


message CreateResponse {
	uint32 house_id = 1;
}

message UploadImageRequest {
    uint32 house_id = 1;
    string url = 2;
}

message UploadImageResponse {
    string url = 1;
}

message Comment {
    string comment = 1;
    string ctime = 2;
    string user_name = 3;
}

message DetailRequest {
    uint32 house_id = 1;
}

message DetailResponse {
    uint32 acreage = 1;
    string address = 2;
    string beds = 3;
    uint32 capacity = 4;
    repeated Comment comments = 5;
    uint32 deposit = 6;
    repeated string facilities = 7;
    uint32 hid = 8;
    repeated string img_urls = 9;
    uint32 min_days = 10;
    uint32 max_days = 11;
    uint32 price = 12;
    uint32 room_count = 13;
    string title = 14;
    string unit = 15;
    string user_avatar = 16;
    uint32 user_id = 17;
    string user_name = 18;
}