syntax = "proto3";

package go.micro.service.user;

service User {
	rpc Info(InfoRequest) returns (InfoResponse) {}
	rpc UploadAvatar(AvatarRequest) returns (AvatarResponse) {}
	rpc UpdateName(UpNameRequest) returns (UpNameResponse) {}
}

message InfoRequest {
	uint32 user_id = 1;
}

message InfoResponse {
	uint32 user_id = 1;
    string name = 2;
    string mobile = 3;
    string real_name = 4;
    string id_card = 5;
    string avatar_url = 6;
}

message AvatarRequest {
    uint32 user_id = 1;
    string avatar_url = 2;
}

enum AvatarStatus {
    AvatarStatusFail = 0;
    AvatarStatusSucc = 1;
}
message AvatarResponse {
    AvatarStatus status = 1;
    string avatar_url = 2;
}

message UpNameRequest {
    uint32 user_id = 1;
    string name = 2;
}

enum UpNameStatus {
    UpNameFail = 0;
    UpNameSucc = 1;
}
message UpNameResponse {
    UpNameStatus status = 1;
    string name = 2;
}
